# IFSP-POS-DEGREE-GO

./: Dockerfile  README.md  docker-compose.yaml  fix_git_author.bat  linkedin_post.md  project_visual.html  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml  green_pipeline.yml  ifsp_ci.yml
src/: main.py
src/adapters/: ml_model.py
src/application/: ports.py  use_cases.py
src/domain/: entities.py
tests/: test_core.py
